@@ -25,8 +25,8 @@ import static io.parsingdata.metal.util.EncodingFactory.le;
 import static io.parsingdata.metal.util.EncodingFactory.signed;
 import static io.parsingdata.metal.util.ParseStateFactory.stream;
 
-import java.util.Arrays;
 import java.util.Collection;
+import java.util.List;
 
 import org.junit.runners.Parameterized.Parameters;
 
@@ -38,7 +38,7 @@ public class ConstantValueTest extends ParameterizedParse {
 
     @Parameters(name="{0} ({4})")
     public static Collection<Object[]> data() {
-        return Arrays.asList(new Object[][] {
+        return List.of(new Object[][] {
             { "1 byte, Eq(0), Signed", single(1, eq(con(0))), stream(0), signed(), true },
             { "1 byte, Eq(0), Unsigned", single(1, eq(con(0))), stream(0), enc(), true },
             { "1 byte, Eq(-1), Signed", single(1, eq(con(-1))), stream(-1), signed(), true },
